--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Presentation Video</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/bZrsH99o-Mo?si=Jgb8ORHHBO8uVawI"
+          <iframe src="https://www.youtube.com/embed/c_HYY78-9Go?si=iDb9D2x6ojAwK5J5"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
